# Aura

./: .gitignore  CMakeLists.txt  README.md  output.s
bench/: Cargo.toml
bench/src/: main.rs
passes/: CMakeLists.txt  Plugin.cpp
passes/BoundsCheckElimination/: BoundsCheckElimination.cpp  BoundsCheckElimination.h
passes/ColdPathOutlining/: ColdPathOutlining.cpp  ColdPathOutlining.h
passes/GEPStrengthReduction/: GEPStrengthReduction.cpp  GEPStrengthReduction.h
passes/HeapToStackPromotion/: HeapToStackPromotion.cpp  HeapToStackPromotion.h
passes/tools/: CMakeLists.txt  RustHpcOpt.cpp
test/: CMakeLists.txt  bounds-check-elim-basic.ll  bounds-check-elim-disabled-by-default.ll  bounds-check-elim-ignores-user-panic.ll  bounds-check-elim-inverted-branch.ll  cold-path-outline-basic.ll  cold-path-outline-disabled.ll  cold-path-outline-hot-preamble.ll  cold-path-outline-multi-block.ll  cold-path-outline-no-loop.ll  gep-strength-reduce-multi-index.ll  gep-strength-reduce-nested-loop.ll  gep-strength-reduce-noncanonical-iv.ll  gep-strength-reduce.ll  heap-to-stack-basic.ll  heap-to-stack-bounded-dynamic-size-in-loop.ll  heap-to-stack-bounded-dynamic-size.ll  heap-to-stack-dynamic-size.ll  heap-to-stack-escapes.ll  heap-to-stack-multi-dealloc.ll  heap-to-stack-relaxed-ssa.ll  heap-to-stack-too-large.ll  heap-to-stack-zeroed-in-loop.ll  run_ll_test.cmake
